Added smartphone; New font; Sound control; Machine sfx etc

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://graphics/func/smartphone.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://graphics/", "res://graphics/tattoo/", "res://graphics/func/")
+dock_filesystem_selected_paths=PackedStringArray("res://graphics/func/ashtray_shadow.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sounds/", "res://graphics/", "res://graphics/tattoo/easy/", "res://graphics/func/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-489
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,36 +28,37 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/root/main.tscn")
+open_scenes=PackedStringArray("res://scenes/root/main.tscn", "res://scenes/controls/audio_control.tscn")
 current_scene="res://scenes/root/main.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=0
+screen=1
 mode="maximized"
-position=Vector2i(0, 23)
+position=Vector2i(1440, 1158)
+size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
+open_scripts=["res://scripts/control/audio_control.gd", "res://scripts/root/drawing_canvas.gd", "res://scripts/root/main.gd", "res://scripts/root/phone.gd", "res://scripts/root/timer_hand.gd"]
+selected_script="res://scripts/root/main.gd"
+open_help=["Time"]
 script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(314, 115, 1932, 1127)
-floating_window_screen=0
+floating_window_rect=Rect2i(1754, 1256, 1932, 1130)
+floating_window_screen=1
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://shaders/jitter.gdshader"]
 split_offset=200
-selected_shader=""
+selected_shader="res://shaders/jitter.gdshader"
 text_shader_zoom_factor=1.0
