Stats screen; Scene control; Other edits

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://graphics/func/ashtray_shadow.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sounds/", "res://graphics/", "res://graphics/tattoo/easy/", "res://graphics/func/")
+dock_filesystem_selected_paths=PackedStringArray("res://graphics/menu_button.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://shaders/", "res://scenes/root/", "res://graphics/", "res://graphics/fonts/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -20,19 +20,22 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-489
-dock_hsplit_4=0
-dock_3="Scene,Import"
-dock_4="FileSystem"
-dock_5="Inspector,Node,History"
+dock_hsplit_3=-627
+dock_hsplit_4=281
+dock_7_selected_tab_idx=0
+dock_split_4=0
+dock_6_selected_tab_idx=0
+dock_5="Scene,History"
+dock_6="FileSystem"
+dock_7="Inspector,Node,Import"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/root/main.tscn", "res://scenes/controls/audio_control.tscn")
-current_scene="res://scenes/root/main.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/root/main.tscn", "res://scenes/controls/audio_control.tscn", "res://scenes/controls/scene_control.tscn", "res://scenes/root/stats.tscn", "res://scenes/controls/game_data.tscn")
+current_scene="res://scenes/root/stats.tscn"
+center_split_offset=-272
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,9 +47,9 @@ size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/control/audio_control.gd", "res://scripts/root/drawing_canvas.gd", "res://scripts/root/main.gd", "res://scripts/root/phone.gd", "res://scripts/root/timer_hand.gd"]
-selected_script="res://scripts/root/main.gd"
-open_help=["Time"]
+open_scripts=["res://scripts/control/audio_control.gd", "res://scripts/root/drawing_canvas.gd", "res://scripts/control/game_data.gd", "res://scripts/root/main.gd", "res://scripts/root/mouse_cursor.gd", "res://scripts/root/phone.gd", "res://scripts/control/scene_control.gd", "res://scripts/root/stats.gd", "res://scripts/root/timer_hand.gd"]
+selected_script="res://scripts/root/stats.gd"
+open_help=["@GlobalScope", "Array", "Control", "Image", "SceneTree", "Time"]
 script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
@@ -62,3 +65,13 @@ open_shaders=["res://shaders/jitter.gdshader"]
 split_offset=200
 selected_shader="res://shaders/jitter.gdshader"
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
