--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://graphics/menu_button.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://shaders/", "res://scenes/root/", "res://graphics/", "res://graphics/fonts/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/root/upgrade_screen.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://shaders/", "res://scenes/", "res://scenes/root/", "res://graphics/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -20,9 +20,9 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-627
-dock_hsplit_4=281
-dock_7_selected_tab_idx=0
+dock_hsplit_3=-761
+dock_hsplit_4=325
+dock_7_selected_tab_idx=1
 dock_split_4=0
 dock_6_selected_tab_idx=0
 dock_5="Scene,History"
@@ -31,12 +31,12 @@ dock_7="Inspector,Node,Import"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/root/main.tscn", "res://scenes/controls/audio_control.tscn", "res://scenes/controls/scene_control.tscn", "res://scenes/root/stats.tscn", "res://scenes/controls/game_data.tscn")
+open_scenes=PackedStringArray("res://scenes/controls/audio_control.tscn", "res://scenes/controls/scene_control.tscn", "res://scenes/root/stats.tscn", "res://scenes/controls/game_data.tscn", "res://scenes/root/main.tscn", "res://scenes/root/upgrade_screen.tscn", "res://scenes/root/menu.tscn")
 current_scene="res://scenes/root/stats.tscn"
 center_split_offset=-272
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=7
 
 [EditorWindow]
 
@@ -47,7 +47,7 @@ size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/control/audio_control.gd", "res://scripts/root/drawing_canvas.gd", "res://scripts/control/game_data.gd", "res://scripts/root/main.gd", "res://scripts/root/mouse_cursor.gd", "res://scripts/root/phone.gd", "res://scripts/control/scene_control.gd", "res://scripts/root/stats.gd", "res://scripts/root/timer_hand.gd"]
+open_scripts=["res://scripts/control/audio_control.gd", "res://scripts/root/drawing_canvas.gd", "res://scripts/control/game_data.gd", "res://scripts/root/main.gd", "res://scripts/root/menu.gd", "res://scripts/root/mouse_cursor.gd", "res://scripts/root/phone.gd", "res://scripts/control/scene_control.gd", "res://scripts/root/stats.gd", "res://scripts/root/timer_hand.gd"]
 selected_script="res://scripts/root/stats.gd"
 open_help=["@GlobalScope", "Array", "Control", "Image", "SceneTree", "Time"]
 script_split_offset=200
@@ -70,7 +70,7 @@ text_shader_zoom_factor=1.0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
+log_filter_1=false
 log_filter_3=true
 log_filter_4=true
 collapse=false
